--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -13,11 +13,7 @@
     <link href="assets/common/img/favicon.png" rel="icon" type="image/png">
     <link href="favicon.ico" rel="shortcut icon">
 
-    <!-- Vendors Styles -->
-    <!-- v1.0.0 -->
     <link rel="stylesheet" type="text/css" href="assets/vendors/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendors/jscrollpane/style/jquery.jscrollpane.css">
-    <link rel="stylesheet" type="text/css" href="assets/vendors/datatables/media/css/dataTables.bootstrap4.min.css">
 
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="assets/common/css/source/main.css">
@@ -26,6 +22,12 @@
     <!-- Vendors Scripts -->
     <!-- v1.0.0 -->
     <script src="assets/vendors/jquery/jquery.min.js"></script>
+    <script src="assets/vendors/tether/dist/js/tether.min.js"></script>
+    <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/vendors/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+    <script src="assets/vendors/jquery-typeahead/dist/jquery.typeahead.min.js"></script>
+    <script src="assets/vendors/autosize/dist/autosize.min.js"></script>
+    <script src="assets/vendors/gsap/src/minified/TweenMax.min.js"></script>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script type="text/javascript"
@@ -34,6 +36,8 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
 
     <!-- UI Scripts -->
+    <script type="text/javascript" src="assets/common/js/common.js"></script>
+    <script type="text/javascript" src="assets/common/js/demo.temp.js"></script>
     <script type="text/javascript" src="views/login/login.js"></script>
 </head>
 <body class="theme-default menu-top menu-static theme-blue" ng-app="loginApp">
