--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -131,7 +131,7 @@
             <div class="left-menu-inner scroll-pane">
                 <ul class="left-menu-list left-menu-list-root list-unstyled">
                     <li class="left-menu-list-active">
-                        <a class="left-menu-link" href="/views/user_personage_manager.html">
+                        <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
                             Персонажи
                         </a>
