--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -563,3 +563,9 @@ hr{
 .table tbody + tbody {
     border-top: none !important;
 }
+
+.notice-filter{
+    margin-top: 15px;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
