--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="Cache-Control" content="public">
     <title>Персонажи</title>
 
     <link href="/assets/common/img/favicon.png" rel="icon" type="image/png">
