--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -18,24 +18,6 @@
     <link rel="stylesheet" type="text/css" href="/assets/common/css/source/main.css">
     <link rel="stylesheet" type="text/css" href="/assets/common/css/source/custom.css">
 
-    <!-- Vendors Scripts -->
-    <!-- v1.0.0 -->
-    <script src="/assets/vendors/jquery/jquery.min.js"></script>
-    <script src="/assets/vendors/tether/dist/js/tether.min.js"></script>
-    <script src="/assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/assets/vendors/datatables/media/js/jquery.dataTables.min.js"></script>
-    <script src="/assets/vendors/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="/assets/vendors/datatables-fixedcolumns/js/dataTables.fixedColumns.js"></script>
-    <script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
-    <script src="/assets/vendors/editable-table/mindmup-editabletable.js"></script>
-
-    <script src="/assets/vendors/angular/angular.js"></script>
-    <script src="/assets/vendors/ngStorage.min.js"></script>
-    <script src="/assets/vendors/ui-bootstrap-tpls-2.0.0.js"></script>
-
-    <script src="/views/permissions/permissions.js"></script>
-    <script src="view_personage.js"></script>
-    <script src="/views/permissions/check_player_permissions.js"></script>
 </head>
 <body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp">
 <div class="boxed-container" ng-controller="permissionsController">
@@ -500,4 +482,23 @@
 
 <div class="main-backdrop"><!-- --></div>
 </body>
+
+<!-- Vendors Scripts -->
+<!-- v1.0.0 -->
+<script src="/assets/vendors/jquery/jquery.min.js"></script>
+<script src="/assets/vendors/tether/dist/js/tether.min.js"></script>
+<script src="/assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/assets/vendors/datatables/media/js/jquery.dataTables.min.js"></script>
+<script src="/assets/vendors/datatables/media/js/dataTables.bootstrap4.min.js"></script>
+<script src="/assets/vendors/datatables-fixedcolumns/js/dataTables.fixedColumns.js"></script>
+<script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
+<script src="/assets/vendors/editable-table/mindmup-editabletable.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+<script src="/assets/vendors/ngStorage.min.js"></script>
+<script src="/assets/vendors/ui-bootstrap-tpls-2.0.0.js"></script>
+
+<script src="/views/permissions/permissions.js"></script>
+<script src="view_personage.js"></script>
+<script src="/views/permissions/check_player_permissions.js"></script>
 </html>
