--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -22,7 +22,7 @@
     <script src="assets/vendors/autosize/dist/autosize.min.js"></script>
     <script src="assets/vendors/gsap/src/minified/TweenMax.min.js"></script>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script type="text/javascript" src="assets/node_modules/angular/angular.min.js"></script>
     <script type="text/javascript"
             src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.js"></script>
     <script type="text/javascript"
