--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="/node_modules/ngstorage/ngStorage.min.js"></script>
 
     <!-- UI Scripts -->
-    <script type="text/javascript" src="assets/common/js/common.js"></script>
+    <script type="text/javascript" src="assets/common/js/common.min.js"></script>
     <script type="text/javascript" src="views/login/login.js"></script>
 </head>
 <body class="theme-default menu-top menu-static theme-blue" ng-app="loginApp">
