--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/vendors/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Clean UI Styles -->
-    <link rel="stylesheet" type="text/css" href="assets/common/css/source/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/common/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="assets/common/css/source/custom.css">
 
 </head>
