--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Erilon login page</title>
 
-    <link rel="stylesheet" type="text/css" href="assets/vendors/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="assets/common/css/main.min.css">
@@ -61,13 +61,13 @@
 </body>
 <!-- Vendors Scripts -->
 <!-- v1.0.0 -->
-<script src="assets/vendors/jquery/jquery.min.js"></script>
-<script src="assets/vendors/tether/dist/js/tether.min.js"></script>
-<script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="assets/vendors/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-<script src="assets/vendors/jquery-typeahead/dist/jquery.typeahead.min.js"></script>
-<script src="assets/vendors/autosize/dist/autosize.min.js"></script>
-<script src="assets/vendors/gsap/src/minified/TweenMax.min.js"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="/node_modules/tether/dist/js/tether.min.js"></script>
+<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/node_modules/jquery-mousewheel/jquery.mousewheel.js"></script>
+<script src="/node_modules/jquery-typeahead/dist/jquery.typeahead.min.js"></script>
+<script src="/node_modules/autosize/dist/autosize.min.js"></script>
+<script src="/node_modules/gsap/src/minified/TweenMax.min.js"></script>
 
 <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="/node_modules/angular-cookies/angular-cookies.min.js"></script>
