--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -12,12 +12,11 @@
 
     <!-- Vendors Styles -->
     <!-- v1.0.0 -->
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap-select/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap-select/dist/css/bootstrap-select.min.css">
 
     <!-- Clean UI Styles -->
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/main.css">
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/custom.css">
+    <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
 
 </head>
 <body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageManagerApp">
@@ -268,21 +267,19 @@
 
 <!-- Vendors Scripts -->
 <!-- v1.0.0 -->
-<script src="/assets/vendors/jquery/jquery.min.js"></script>
-<script src="/assets/vendors/tether/dist/js/tether.min.js"></script>
-<script src="/assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/assets/vendors/jscrollpane/script/jquery.jscrollpane.min.js"></script>
-<script src="/assets/vendors/datatables/media/js/jquery.dataTables.min.js"></script>
-<script src="/assets/vendors/datatables-fixedcolumns/js/dataTables.fixedColumns.js"></script>
-<script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
-<script src="/assets/vendors/editable-table/mindmup-editabletable.js"></script>
-<script src="/assets/vendors/chartist/dist/chartist.min.js"></script>
-<script src="/assets/vendors/chartist-plugin-tooltip/dist/chartist-plugin-tooltip.min.js"></script>
-<script src="/assets/vendors/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-<script src="/assets/vendors/chart.js/src/Chart.bundle.min.js"></script>
+<script src="/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="/node_modules/tether/dist/js/tether.min.js"></script>
+<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/node_modules/jscrollpane/script/jquery.jscrollpane.min.js"></script>
+<script src="/node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
+<script src="/node_modules/datatables-fixedcolumns/js/dataTables.fixedColumns.js"></script>
+<script src="/node_modules/datatables-responsive/js/dataTables.responsive.js"></script>
+<script src="/node_modules/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+<script src="/node_modules/chart.js/dist/Chart.bundle.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
+<script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
+<script type="text/javascript" src="/node_modules/ngstorage/ngStorage.min.js"></script>
+
 <script src="permissions/permissions.js"></script>
 <script src="personage_manager.js"></script>
 <script src="permissions/check_player_permissions.js"></script>
