--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -280,6 +280,7 @@
 <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="/node_modules/ngstorage/ngStorage.min.js"></script>
 
+<script src="/assets/common/js/common.min.js"></script>
 <script src="permissions/permissions.js"></script>
 <script src="personage_manager.js"></script>
 <script src="permissions/check_player_permissions.js"></script>
