--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -26,7 +26,7 @@
 
     <!-- Clean UI Scripts -->
     <script src="/assets/common/js/common.js"></script>
-    <script src="/node_modules/angular/angular.js"></script>
+    <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
     <script src="/views/permissions/permissions.js"></script>
     <script src="view_personage.js"></script>
