--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -264,6 +264,7 @@
 
 <div class="main-backdrop"><!-- --></div>
 </body>
+<link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
 
 <!-- Vendors Scripts -->
 <!-- v1.0.0 -->
@@ -276,6 +277,7 @@
 <script src="/node_modules/datatables-responsive/js/dataTables.responsive.js"></script>
 <script src="/node_modules/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 <script src="/node_modules/chart.js/dist/Chart.bundle.min.js"></script>
+<script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
 
 <script type="text/javascript" src="/node_modules/angular/angular.min.js"></script>
 <script type="text/javascript" src="/node_modules/ngstorage/ngStorage.min.js"></script>
