--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -6,116 +6,28 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Персонаж</title>
 
-    <link href="/assets/common/img/favicon.144x144.png" rel="apple-touch-icon" type="image/png" sizes="144x144">
-    <link href="/assets/common/img/favicon.114x114.png" rel="apple-touch-icon" type="image/png" sizes="114x114">
-    <link href="/assets/common/img/favicon.72x72.png" rel="apple-touch-icon" type="image/png" sizes="72x72">
-    <link href="/assets/common/img/favicon.57x57.png" rel="apple-touch-icon" type="image/png">
-    <link href="/assets/common/img/favicon.png" rel="icon" type="image/png">
-    <link href="favicon.ico" rel="shortcut icon">
-
-    <!-- HTML5 shim and Respond.js for < IE9 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Vendors Styles -->
-    <!-- v1.0.0 -->
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/jscrollpane/style/jquery.jscrollpane.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/ladda/dist/ladda-themeless.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/select2/dist/css/select2.min.css">
-    <link rel="stylesheet" type="text/css"
-          href="/assets/vendors/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/fullcalendar/dist/fullcalendar.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/cleanhtmlaudioplayer/src/player.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/cleanhtmlvideoplayer/src/player.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap-sweetalert/dist/sweetalert.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/summernote/dist/summernote.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/owl.carousel/dist/assets/owl.carousel.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/ionrangeslider/css/ion.rangeSlider.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/datatables/media/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/c3/c3.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/chartist/dist/chartist.min.css">
-    <!-- v.1.4.0 -->
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/nprogress/nprogress.css">
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/jquery-steps/demo/css/jquery.steps.css">
-    <!-- v.1.4.2 -->
-    <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap-select/dist/css/bootstrap-select.min.css">
-
-    <!-- Clean UI Styles -->
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/main.css">
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/custom.css">
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/animate.css">
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/source/slide-menus.css">
+    <link rel="stylesheet" type="text/css" href="/assets/common/css/min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
 
     <!-- Vendors Scripts -->
     <!-- v1.0.0 -->
-    <script src="/assets/vendors/jquery/jquery.min.js"></script>
-    <script src="/assets/vendors/tether/dist/js/tether.min.js"></script>
-    <script src="/assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/assets/vendors/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-    <script src="/assets/vendors/jscrollpane/script/jquery.jscrollpane.min.js"></script>
-    <script src="/assets/vendors/spin.js/spin.js"></script>
-    <script src="/assets/vendors/ladda/dist/ladda.min.js"></script>
-    <script src="/assets/vendors/select2/dist/js/select2.full.min.js"></script>
-    <script src="/assets/vendors/html5-form-validation/dist/jquery.validation.min.js"></script>
-    <script src="/assets/vendors/jquery-typeahead/dist/jquery.typeahead.min.js"></script>
-    <script src="/assets/vendors/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-    <script src="/assets/vendors/autosize/dist/autosize.min.js"></script>
-    <script src="/assets/vendors/bootstrap-show-password/bootstrap-show-password.min.js"></script>
-    <script src="/assets/vendors/moment/min/moment.min.js"></script>
-    <script src="/assets/vendors/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="/assets/vendors/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script src="/assets/vendors/cleanhtmlaudioplayer/src/jquery.cleanaudioplayer.js"></script>
-    <script src="/assets/vendors/cleanhtmlvideoplayer/src/jquery.cleanvideoplayer.js"></script>
-    <script src="/assets/vendors/bootstrap-sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/node_modules/autosize/dist/autosize.min.js"></script>
     <script src="/assets/vendors/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
-    <script src="/assets/vendors/summernote/dist/summernote.min.js"></script>
-    <script src="/assets/vendors/owl.carousel/dist/owl.carousel.min.js"></script>
-    <script src="/assets/vendors/ionrangeslider/js/ion.rangeSlider.min.js"></script>
-    <script src="/assets/vendors/nestable/jquery.nestable.js"></script>
-    <script src="/assets/vendors/datatables/media/js/jquery.dataTables.min.js"></script>
-    <script src="/assets/vendors/datatables/media/js/dataTables.bootstrap4.min.js"></script>
-    <script src="/assets/vendors/datatables-fixedcolumns/js/dataTables.fixedColumns.js"></script>
-    <script src="/assets/vendors/datatables-responsive/js/dataTables.responsive.js"></script>
-    <script src="/assets/vendors/editable-table/mindmup-editabletable.js"></script>
-    <script src="/assets/vendors/d3/d3.min.js"></script>
-    <script src="/assets/vendors/c3/c3.min.js"></script>
-    <script src="/assets/vendors/chartist/dist/chartist.min.js"></script>
-    <script src="/assets/vendors/peity/jquery.peity.min.js"></script>
-    <!-- v1.0.1 -->
-    <script src="/assets/vendors/chartist-plugin-tooltip/dist/chartist-plugin-tooltip.min.js"></script>
-    <!-- v1.1.1 -->
-    <script src="/assets/vendors/gsap/src/minified/TweenMax.min.js"></script>
-    <script src="/assets/vendors/hackertyper/hackertyper.js"></script>
-    <script src="/assets/vendors/jquery-countTo/jquery.countTo.js"></script>
-    <!-- v1.4.0 -->
-    <script src="/assets/vendors/nprogress/nprogress.js"></script>
-    <script src="/assets/vendors/jquery-steps/build/jquery.steps.min.js"></script>
-    <!-- v1.4.2 -->
-    <script src="/assets/vendors/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
-    <script src="/assets/vendors/chart.js/src/Chart.bundle.min.js"></script>
 
+    <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
     <!-- Clean UI Scripts -->
-    <script src="/assets/common/js/common.js"></script>
-    <script src="/assets/common/js/demo.temp.js"></script>
-    <script src="/assets/vendors/angular/angular.js"></script>
-    <script src="//cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>-->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>-->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>-->
-
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.0.js"></script>
-    <script src="https://johnny.github.io/jquery-sortable/js/jquery-sortable.js"></script>
+    <script src="/node_modules/angular/angular.min.js"></script>
+    <script src="/node_modules/jquery.scrollto/jquery.scrollTo.min.js"></script>
+    <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
+    <script src="/node_modules/jquery-sortable/source/js/jquery-sortable-min.js"></script>
     <script src="/assets/common/js/menu.js"></script>
 
     <script src="../permissions/permissions.js"></script>
     <script src="personage_main_controller.js"></script>
-    <!--<script src="dialogCtrl.js"></script>-->
-    <!--<script src="meritDialogCtrl.js"></script>-->
     <script src="../permissions/check_player_permissions.js"></script>
 </head>
 <body class="theme-default menu-left mode-material layout-boxed mode-box-shadow" ng-app="personageApp">
@@ -300,69 +212,6 @@
                         <button class="btn margin-inline notesButton">Заметки</button>
                     </div>
 
-                    <div class="modal fade" id="confirmSpellsChangesModal" tabindex="-1" role="dialog"
-                         aria-labelledby=""
-                         aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                    <h4 class="modal-title" id="myModalSpellsLabel">Удаление заклинаний</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Данное изменение приведет к удалению заклинаний из данной школы:
-                                        <span ng-repeat="personageSpell in personageSpellsToDelete">
-                                        <span style="font-weight: bold">"{{personageSpell.Spell.name}}"</span><span
-                                                ng-hide="$last">,</span>
-                                        </span>.
-                                    </p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn" data-dismiss="modal" id="deleteSpellsCancelled">
-                                        Отменить
-                                        изменнения
-                                    </button>
-                                    <button type="button" class="btn btn-primary" data-dismiss="modal"
-                                            id="deleteSpellsConfirmed">Удалить и продолжить
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="modal fade" id="confirmChangesModal" tabindex="-1" role="dialog" aria-labelledby=""
-                         aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                    <h4 class="modal-title" id="myModalLabel">Удаление достоинства</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Данное изменение приведет к удалению достоинств:
-                                        <span ng-repeat="item in itemsToDelete">
-                                            <strong>"{{item.targetMerit.Merit.name}}"</strong>
-                                            имеет пререквизит <strong>{{item.prerequisiteName}}: {{item.prerequisiteValue}}</strong>
-                                            <span ng-hide="$last">,</span>
-                                        </span>
-                                        .
-                                    </p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn" data-dismiss="modal" id="deleteCancelled">Отменить
-                                        изменнения
-                                    </button>
-                                    <button type="button" class="btn btn-primary" data-dismiss="modal"
-                                            id="deleteConfirmed">Удалить и продолжить
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div id="inherents" class="tab-pane active table-responsive" role="tabpanel">
                         <table class="table table-hover">
                             <tr ng-repeat="personageInherent in personageInherents">
@@ -1065,7 +914,7 @@
                                     <div class="btn-group btn-group-justified plus-minus-block">
                                         <div class="btn-group">
                                             <button class="btn btn-rounded btn-sm btn-secondary"
-                                                    ng-click="decreaseTriggerSkillLevel(triggerSkillMixed.personageTriggerSkill)"
+                                                    ng-click="decreaseTriggerSkillLevel(triggerSkillMixed.personageTriggerSkill, false)"
                                                     type="button"
                                                     ng-disabled="triggerSkillMixed.personageTriggerSkill == null">
                                                 <i class="icmn-minus"></i>
