--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -16,6 +16,7 @@
     <script src="/node_modules/tether/dist/js/tether.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/node_modules/autosize/dist/autosize.min.js"></script>
+    <script src="/node_modules/jscrollpane/script/jquery.jscrollpane.min.js"></script>
     <script src="/assets/vendors/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
 
     <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
@@ -24,6 +25,7 @@
     <script src="/node_modules/jquery.scrollto/jquery.scrollTo.min.js"></script>
     <script src="/node_modules/ngstorage/ngStorage.min.js"></script>
     <script src="/node_modules/jquery-sortable/source/js/jquery-sortable-min.js"></script>
+    <script src="/assets/common/js/common.min.js"></script>
     <script src="/assets/common/js/menu.js"></script>
 
     <script src="../permissions/permissions.js"></script>
