--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -164,6 +164,7 @@
                             {{personage.name}}
                             <span class="ink animate"></span>
                         </a>
+                        <button type="button" class="btn btn-success" ng-click="savePersonage()">Сохранить</button>
                         <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
                             <a class="dropdown-item" href="javascript: void(0)">Возраст: {{personage.age}} лет</a>
